Add the FAQ + better Swagger specs + donate page
